# FastApi-Technical-Test-CleanArch

./: .gitignore  README.md  alembic.ini  docker-compose.yml  dockerfile  env.example  pyproject.toml  run.py
alembic/: env.py
app/: main.py
app/application/: exceptions.py
app/application/services/: auth_service.py  task_service.py
app/core/: config.py
app/domain/: unit_of_work.py
app/domain/constants/: TASK_STATUS.py
app/domain/entities/: tasks.py  users.py
app/domain/repositories/: itask_repository.py  iuser_repository.py
app/infrastructure/: database.py  exceptions.py
app/infrastructure/common/: auth_service.py  paginated_results.py  sql_alchemy_unit_of_work.py
app/infrastructure/dtos/: task_dtos.py  user_dtos.py
app/infrastructure/persistence/: entities_configuration.py
app/infrastructure/repositories/: task_repository.py  user_repository.py
app/presentation/exceptions/: __init__.py  exceptions.py
app/presentation/routers/: auth_router.py  task_router.py
